# WDAL

./: .projections.json  CMakeLists.txt
include/wdal/: pulse.hpp  reader.hpp  sample_block.hpp  types.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  pulse_test.cpp  sample_block_test.cpp  types_test.cpp
